<resources>
    <string name="app_name">FileManager</string>
    <string name="files_manager_title">Files Manager</string>
    <string name="tool_title">Tool</string>
    <string name="external_storage_title">External storage</string>
    <string name="phone_storage">Phone storage</string>
    <string name="setting_title">Setting</string>
    <string name="home_title">Home</string>
    <string name="save_title_all_caps">SAVE</string>
    <string name="setting_title_all_caps">SETTING</string>
    <string name="type_title_all_caps">TYPE</string>
    <string name="images_title">Images</string>
    <string name="videos_title">Videos</string>
    <string name="music_title">Music</string>
    <string name="documents_title">Documents</string>
    <string name="apks_title">APKs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view">View</string>
    <string name="list_view">List view</string>
    <string name="cell_view">Cell view</string>
    <string name="sort_by_last_modified">Sort by last modified</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by">Sort by</string>
    <string name="empty_file">empty</string>
    <string name="one_file">1 file</string>
    <string name="files">%s files</string>
    <string name="download_video">Download video</string>
    <string name="show_all_video">Show video download</string>
</resources>